fixed text overlow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,6 @@ h1 {
 	}
 	.pagesubheading {
 		text-align: right;
+    margin-bottom: 0;
 	}
 }
