--- a/src/pages/Background/background.css
+++ b/src/pages/Background/background.css
@@ -1,1 +1,3 @@
 /* ------ background page ------ */
+#page_background {
+}
